--- a/jsonteht1.html
+++ b/jsonteht1.html
@@ -10,6 +10,9 @@
     <h1>JavaScript Test Page</h1>
     <h2>JSON-testiä Digitekniikat-kurssille</h2>
     <p>Ensimmäinen commit, jotta tiedän että tämä toimii</p>
+    <p>Commit, jotta saadaan testiin vielä yksi commit jotta
+        testataan että vs coden sisäinen commit toimii.
+    </p>
 
     <p id="demo">Click the button to change this text.</p>
 
