lisättiin js scripti tiedosto

--- a/jsonteht1.html
+++ b/jsonteht1.html
@@ -14,14 +14,18 @@
         testataan että vs coden sisäinen commit toimii
     </p>
 
+<div id="vastaus">
+
+    
+</div>
+
     <p id="demo">Click the button to change this text.</p>
 
     <button onclick="changeText()">Click Me</button>
 
-    <script>
-        function changeText() {
-            document.getElementById("demo").innerHTML = "Hello, JavaScript is working!";
-        }
+    <script src="jsonteht1jscript.js">
+
+
     </script>
 
 </body>
