testattiin uudella mockylla

--- a/jsonteht1.html
+++ b/jsonteht1.html
@@ -11,7 +11,7 @@
 
 
 <script>
-fetch('https://run.mocky.io/v3/08ed6c9e-fb6c-4870-855a-a6eb9238a73c')
+fetch(https://run.mocky.io/v3/cf01bec9-b41f-4700-9468-cdf610044295)
 
     // Muunnetaan vastaus JSON muotoon
     
