json-tehtävien tekoa

--- a/Sivupohja.html
+++ b/Sivupohja.html
@@ -10,16 +10,15 @@
 <body>
 
     <header>
-        <h1>Welcome to My Basic HTML Page</h1>
+        <h1>Etusivu</h1>
     </header>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="saa.html">Sää</a>
+        <a href="tapahtumat.html">Tapahtumat</a>
     </nav>
 
-    <script src="jsonteht2script.js"></script>
+    <script src="#"></script>
     
 <div id="vastaus2"></div>
 
