--- a/junat.html
+++ b/junat.html
@@ -10,23 +10,17 @@
 <body>
 
     <header>
-        <h1>Welcome to My Basic HTML Page</h1>
+        <h1>Junat</h1>
     </header>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="teht4Etusivu.html">Etusivu</a>
+        <a href="liikennekamera.html">Liikennekamera</a>
     </nav>
 
-    <script src="jsonteht2script.js"></script>
+    <script src="#"></script>
     
 <div id="vastaus2"></div>
-
-    <section>
-        <h2>About This Page</h2>
-        <p>This is a basic HTML template. You can add your content here and customize it further using CSS or JavaScript as needed.</p>
-    </section>
 
     <footer>
         <p>&copy; 2024 Basic HTML Page</p>
